changed monDB URI

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_URI = 'mongodb+srv://Dwaipayan-Db:1234@cluster0.y6sj2.mongodb.net/test'
+MONGO_URI = 'mongodb+srv://dwai:1234@cluster0.ctspnfh.mongodb.net/?retryWrites=true&w=majority'
 PORT = 8000
 
 
